editted by aspiras